base project created

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.5",
+    "node-fetch": "^2.6.1",
     "pug": "^3.0.2"
   }
 }
