--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-nasa-app",
   "version": "1.0.0",
-  "description": "<!-- ABOUT THE PROJECT --> ## About The Project",
+  "description": "The Nasa App",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
